--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,2 +1,6 @@
-{{> nav}}
-<h2>This is the streaming center!</h2>
+<div class="container">
+    <h2 class="centerAligned">This is the streaming center!</h2>
+    <p>From here you can manage story information and follower and/or chatter information.</p>
+    <p>Add story information which can be seen on the Obs overlay, including interesting info and content warnings</p>
+    <p>Or add and manage chatter's preferred names so the bot will refer to them like that.</p>
+</div>
