--- a/views/layouts/obsOverlay.hbs
+++ b/views/layouts/obsOverlay.hbs
@@ -4,16 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/obsOverlayStyle.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{pageName}} | Stream Control Center</title>
 </head>
 
 <body>
-    {{> nav}}
-    <div class="container">
-        {{{body}}}
-    </div>
+    {{{body}}}
 </body>
+
+</html>
 
 </html>
