--- a/views/manageChatters.hbs
+++ b/views/manageChatters.hbs
@@ -1,20 +1,31 @@
-{{> nav}}
-<div class="container">
-    <h2>Chatters</h2>
-    <p>These are chatters that are stored in our DB, either because they are followers,
-        or because they are VIPs or regulars who have a preferred name that the bot is to call
-        them by.
-    </p>
-    {{#if chatters}}
-    <ul>
-        {{#each chatters}}
-        <p>UserId: {{this.Name.UserId}}</p>
-        <p>UserName: {{this.Name.UserName}}</p>
-        <p>Capitalised UserName: {{this.Name.CapitalisedUserName}}</p>
-        <p>Preferred Name: {{this.Name.PreferredName}}</p>
-        <a href="/add-preferred-name/{{this.UserId}}">Change preferred name</a>
-        <hr />
-        {{/each}}
-    </ul>
-    {{/if}}
+<h2>Chatters</h2>
+<p>These are chatters that are stored in our DB, either because they are followers,
+    or because they are VIPs or regulars who have a preferred name that the bot is to call
+    them by.
+</p>
+{{#if chatters}}
+<div class="listBlock">
+    {{#each chatters}}
+    <a class="listItem" href="/manage-chatters/{{this.Name.UserId}}">
+        <h3>{{this.Name.PreferredName}}</h3>
+        <div class="listItemRow">
+            <p class="label">UserId: </p>
+            <p>{{this.Name.UserId}}</p>
+        </div>
+        <div class="listItemRow">
+            <p class="label">UserName:</p>
+            <p> {{this.Name.UserName}}</p>
+        </div>
+        <div class="listItemRow">
+            <p class="label">Capitalised UserName: </p>
+            <p>{{this.Name.CapitalisedUserName}}</p>
+        </div>
+        <div class="listItemRow">
+            <p class="label">Preferred Name: </p>
+            <p>{{this.Name.PreferredName}}</p>
+        </div>
+        <div class="listItemRow"></div>
+    </a>
+    {{/each}}
 </div>
+{{/if}}
