--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,5 +1,7 @@
 <nav>
     <a href="/home">Home page</a>
-    <a href="/add-story">Add story</a>
     <a href="/manage-stories">Manage stories</a>
+    <a href="/add-story">Add story</a>
+    <a href="/manage-chatters">Manage chatters</a>
+    <a href="/add-preferred-name">Add chatter</a>
 </nav>
