--- a/views/addStory.hbs
+++ b/views/addStory.hbs
@@ -1,17 +1,26 @@
-{{> nav}}
 <h2>Adding a story!</h2>
-<div class="add-story">
-    <form action="/add-story" method="POST">
+The IDs of the next and previous story are used to get the title of those stories and display them on the obs overlay,
+along with providing a clickable link so navigating to the next story can be done directly through obs.
+<form action="/add-story" method="POST">
+    <div class="formElement">
         <label for="title">Title of story</label>
-        <input type="text" id="title" name="title" required><br/>
+        <input type="text" id="title" name="title" required><br />
+    </div>
+    <div class="formElement">
         <label for="content-warning">Content warning (separate with ;)</label>
-        <input type="text" id="content-warning" name="contentWarning"><br/>
+        <input type="text" id="content-warning" name="contentWarning"><br />
+    </div>
+    <div class="formElement">
         <label for="info">Interesting info (separate with ;)</label>
-        <input type="text" id="info" name="interestingInfo"><br/>
+        <input type="text" id="info" name="interestingInfo"><br />
+    </div>
+    <div class="formElement">
         <label for="next-tale">ID of next tale</label>
-        <input type="text" id="next-tale" name="nextTale" required><br/>
+        <input type="text" id="next-tale" name="nextTale" required><br />
+    </div>
+    <div class="formElement">
         <label for="prev-tale">ID of previous tale</label>
-        <input type="text" id="prev-tale" name="previousTale" required><br/>
-        <button>Submit</button>
-    </form>
-</div>
+        <input type="text" id="prev-tale" name="previousTale" required><br />
+    </div>
+    <button class="submit">Submit</button>
+</form>
