--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -4,4 +4,5 @@
     <a href="/add-story">Add story</a>
     <a href="/manage-chatters">Manage chatters</a>
     <a href="/add-preferred-name">Add chatter</a>
+    <a style="background-color: #8956FB;" href="/twitch">twitch</a>
 </nav>
