--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,6 +8,10 @@ body {
     text-align: center;
 }
 
+.smaller {
+    font-size: smaller;
+}
+
 .container {
     width: 90%;
     max-width: 700px;
@@ -30,6 +34,7 @@ nav a {
     text-align: center;
     text-decoration: none;
     border: 2px solid white;
+    font-weight: bold;
 }
 
 nav a:hover {
@@ -69,7 +74,17 @@ label {
     color: rgb(82, 82, 82);
     font-weight: bold;
     margin: 0;
-    width: 20%;
+    width: 23%;
+}
+
+.colourSquare {
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.3rem;
+}
+
+ul {
+    margin: 0;
 }
 
 input:focus {
@@ -105,6 +120,7 @@ input:focus {
     padding: 0.8rem;
     display: flex;
     flex-flow: column nowrap;
+    justify-content: space-between;
     gap: 1rem;
     text-decoration: none;
     color: black;
